--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,19 +19,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.CampusEventsStaff"
         tools:targetApi="31">
+        <activity
+            android:name=".Share_Event_Result"
+            android:exported="false" />
+        <activity
+            android:name=".Share_Mail"
+            android:exported="false" />
+        <activity
+            android:name=".ViewStudentsDetails"
+            android:exported="false" />
         <activity
             android:name=".Share_Messages"
             android:exported="false" />
         <activity
             android:name=".Dashboard"
             android:exported="false" />
-        <activity
-            android:name=".sidebar"
-            android:exported="false"
-            android:label="@string/title_activity_sidebar"
-            android:theme="@style/Theme.CampusEventsStaff.NoActionBar" />
         <activity
             android:name=".ViewParticipantsActivity"
             android:exported="false" />
